--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 
 <html>
     <head>
-           <title>Game Art</title>
+           <title>Game Art.</title>
            <meta harset="UTF-8">
            <meta name="viewport" content="width-device-width", initial-scale="1">
            <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-
+        <h1>Como funcina os pixels de uma game art.</h1>
+        <h2>Pixels Estilizados.</h2>
+        <img src="..." width="..." height="...">
     </body>
 </html>
