--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <body>
         <h1>Como funcina os pixels de uma game art.</h1>
         <h2>Pixels Estilizados.</h2>
-        <img src="..." width="..." height="...">
+        <img src="SpiderManAcrossthespiderversePoster-1000x600.jpg" width="800px" height="500px">
     </body>
 </html>
