--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     </head>
 
     <body>
+        <header>
+            <div>
+                <input type="text" id="textbusca" placeholder="Buscar..."><button>Pesquisar</button>
+            </div>
+        </header>
         <h1>Como funcina os pixels de uma game art.</h1>
         <h2>Pixels Estilizados.</h2>
         <img src="SpiderManAcrossthespiderversePoster-1000x600.jpg" width="800px" height="500px">
+        <foother>
+            <a href="https://www.instagram.com/luciano_padua_"><button>Instagram Criador</button></a>
+        </foother>
     </body>
 </html>
