--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-           <title>Game Art.</title>
+           <title>Arte Pixelada.</title>
            <meta charset="UTF-8">
            <meta name="viewport" content="width-device-width", initial-scale="1">
            <link rel="stylesheet" href="styles.css">
@@ -14,7 +14,7 @@
                 <input type="text" id="textbusca" placeholder="Buscar..."><button>Pesquisar</button>
             </div>
         </header>
-        <h1>Como funcina os pixels de uma game art.</h1>
+        <h1>Como funcina os pixels de uma pixel art.</h1>
         <h2>Pixels Estilizados.</h2>
         <img src="SpiderManAcrossthespiderversePoster-1000x600.jpg" width="800px" height="500px">
         <foother>
