--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         </header>
         <h1>Como funcina os pixels de uma pixel art.</h1>
         <h2>Pixels Estilizados.</h2>
+        <div class="imagem">
         <img src="SpiderManAcrossthespiderversePoster-1000x600.jpg" width="800px" height="500px">
-        <foother>
+        </div>
+        <footer>
             <a href="https://www.instagram.com/luciano_padua_"><button>Instagram Criador</button></a>
         </foother>
     </body>
